# pyri-webui-resources

./: .gitignore  README.md  pyproject.toml  setup.py
tools/: install_npm_deps.py  install_pyodide.py
tools/files/: golden-layout.js  webui_deps_package.json
