[project]

name = "pyri-webui-resources"
version = "0.3.0"
description = "PyRI Teach Pendant WebUI Resources"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["pyodide", "pyri-project", "pyri-runtime-package", "robotics"]
authors = [
    {name = "John Wason", email = "wason@wasontech.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    'importlib-resources==5.13.0'
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[project.urls]
homepage="http://pyri.tech"
repository="https://github.com/pyri-project/pyri-webui-resources"

[tool.setuptools.package-data]
'pyri.webui_resources.deps.webui_static' = ['*']
'pyri.webui_resources.pyodide.webui_static' = ['*' ]
